SG-2004-07-25-0: Bugfix:    - fixed lWriteListTo to use the spedified file handle
                            - some minor cleanup
                            - changed the job name specification that all characters
                              are allowed except: "\n", "\t", "\r", "/", ":", "@"
                 Issue:     -NA-
                 Changed:   qmaster, submit.1

CR-2004-07-24-1: Bugfix:    schedd and qmaster get out of sync - no scheduling
                            for long time
                 Changed:   communication lib
                 Issue:     1141
                 Bugtraq:   5077589
                 Review:    JG

MD-2004-07-22-2  Bugfix:    reprioritize_interval descr in sched_conf(5) needs improvement
                 Changed:   man5/sched_conf.5
                 Issue:     1040
                 Bugtraq:   5077165
                 Review:    JG

MD-2004-07-22-1: Bugfix:    NO_REPRIORITATION should be removed from man pages
                 Changed:   man5/queue_conf.5, man5/sge_conf.5, sge_priority.5
                 Issue:     1097
                 Bugtraq:   507167
                 Review:    JG

MD-2004-07-22-0: Bugfix:    uninstall procedure doesn't remove rc-script of execd!
                 Changed:   inst-sge, autoinstall template
                 Issue:     1130
                 Bugtraq:   5071868
                 Review:    JG

RH-2004-07-22-0: Bugfix:    Wrong parameter for -Mc option argument qconf(1)
                            man page fixed.
                            Enhancements in man page for sched_conf(5).
                            In man pages submit(1) the '$' and '.' as forbidden
                            characters for job names removed.
                 Issue:     1114, 969, ???????
                 Bugtraq:   ????, ???, 5076358
                 Changed:   qconf(1), sched_conf(5), submit(1)
                 Review:    SG

JG-2004-07-21-0: Bugfix:    Fixed a bug in aimk -shared-libs.