@@ -1,3 +1,10 @@
+SG-2004-07-26-0: Bugfix:    - first part of the event_master changes. The total
+                            update of a event client is now thread save.
+                            - excluded the flowwing character from a job name: "\"
+                 Changed:   qmaster, submit.1
+                 Bugtraq:   5076372
+                 Review:    JG
+
 SG-2004-07-25-0: Bugfix:    - fixed lWriteListTo to use the spedified file handle
                             - some minor cleanup
                             - changed the job name specification that all characters
